--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>&nbsp;</p>
 <p>im 13 years old, 8th grader.</p>
 <p>&nbsp;</p>
-<p><a href="file:///Users/students/Desktop/untitled%20folder%202/Untitled-2.html">my AI painter:&nbsp;</a></p>
+<p><a href="Untitled-2.html">my AI painter:&nbsp;</a></p>
 </body>
 <body>
 	
