--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -7,7 +7,7 @@
 
 <body>
 <p> <img src="Image 2022-10-11 at 11.49 AM.jpg" width="964" height="1567" alt=""><img src="Image 2022-10-12 at 11.53 AM.jpg" width="1024" height="1024" alt=""> </p>
-<p><a href="file:index.html">my self intro:&nbsp;</a></p>
+<p><a href="index.html">my self intro:&nbsp;</a></p>
 </body>
 <body>
 my self intro:
